--- a/index.html
+++ b/index.html
@@ -20,29 +20,34 @@
 
     <section class="main-content">
       <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="beskrivelse" class="anchor" href="#beskrivelse" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Beskrivelse</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
+<p>PakkR er en Windows 10 applikasjon for sporing av pakker som håndteres av Posten Norge AS.</p>
 
 <h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
+<a id="siste-nytt" class="anchor" href="#siste-nytt" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Siste nytt</h3>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+<p>Utvikling pågår for versjon 1.0:</p>
+
+<ul>
+<li>Innlogging</li>
+<li>Vise innkommende pakker</li>
+<li>Se detaljer for en pakke</li>
+<li>Legge til en pakke ved bruk av sporingsnummer</li>
+<li>Nytt design</li>
+</ul>
+
+<p>Sist oppdatert: 29. februar 2016</p>
 
 <h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
+<a id="skjermbilder" class="anchor" href="#skjermbilder" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Skjermbilder</h3>
 
-<p>You can <a href="https://help.github.com/articles/basic-writing-and-formatting-syntax/#mentioning-users-and-teams" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
+<p>Ingen skjermbilder ennå.</p>
 
 <h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
+<a id="facebook" class="anchor" href="#facebook" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Facebook</h3>
 
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
+<p>Hvis du har ideer, kommentarer eller vil gi ris/ros så gjerne legg igjen et lite innlegg på vår <a href="https://www.facebook.com/Utviklerjournal-Sporingsapp-for-Windows-10-1133287183351654">Facebook side</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/henningms/pakkr">Pakkr</a> is maintained by <a href="https://github.com/henningms">henningms</a>.</span>
