Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <body>
     <section class="page-header">
       <h1 class="project-name">Pakkr</h1>
-      <h2 class="project-tagline">Pakkesporing</h2>
+      <h2 class="project-tagline">Pakkesporing for pakker håndtert av Posten Norge AS</h2>
       <a href="https://github.com/henningms/pakkr" class="btn">View on GitHub</a>
       <a href="https://github.com/henningms/pakkr/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/henningms/pakkr/tarball/master" class="btn">Download .tar.gz</a>
@@ -47,7 +47,7 @@
 <h3>
 <a id="facebook" class="anchor" href="#facebook" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Facebook</h3>
 
-<p>Hvis du har ideer, kommentarer eller vil gi ris/ros så gjerne legg igjen et lite innlegg på vår <a href="https://www.facebook.com/Utviklerjournal-Sporingsapp-for-Windows-10-1133287183351654">Facebook side</a></p>
+<p>Hvis du har ideer, kommentarer eller vil gi ris/ros så gjerne legg igjen et lite innlegg på vår <a href="https://www.facebook.com/PakkR-1133287183351654/">Facebook side</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/henningms/pakkr">Pakkr</a> is maintained by <a href="https://github.com/henningms">henningms</a>.</span>
